# language

./: .gitignore  .gitmodules  CMakeLists.txt  HelloWorld.java  Makefile  README  README.md  abc  abstract-pattern.cc  alarm_test.c  anonymous_pipe.c  argu_print.c  argu_print.sh  argu_test.c  async_read_and_wriet.c  can_not_pass_NULL_to_strlen.c  case_test.sh  close_on_exec.c  close_on_exec_child.c  code_lines_cnt.sh  code_rules.txt  condition_test.sh  ctx_get_test.c  ctx_set_test.c  daemon_test.c  decorator.cc  define_dynamic_array.c  define_function_pointer.c  define_struct_in_c.c  define_struct_in_c.h  define_test.c  design-pattern-single.cc  enum_size_equal_4.c  enum_test.c  error_test.c  execl_argu.c  exit_1.c  factory-method.cc  fdopen_test.c  fifo_read.c  (+157 more)
TT/: pom.xml
alias/: make.bat  mkdir.bat  rm.bat  rmdir.bat  uname.bat  vim.bat
basic/: Readme.module  TCP-client.py  TCP-server.py  avrg_score.py  bz2_test.py  class_inherit_test.py  class_variable_test.py  configparse.py  find_key_words.py  find_text.py  fnmatch_test.py  for_test.py  format_print.py  func2.py  function_params.py  function_variable_test.py  get_command_param.py  get_file_size.py  getattr_test.py  gzip_test.py  import_feature_test.py  interface_config.py  list_builtins_types.py  make_class_callable.py  map_test.py  mode_name.py  nonlocal.py  nonlocal2.py  pick_up_files.py  rename.py  rm.py  rm_files.py  string_value.py  sys_getframe.py  tab_2_space.py  tarfile_test.py  try_catch_basic.py  try_test.py  turn_on_the_light.py  var.py  (+4 more)
basic/modules/: a.py  b.py  c.py
bat/: abc  param.bat  param2.bat  temp.txt  test1.bat  test1.py  test2.bat  test3.bat  test4.bat  test5.bat  test5.c
chan/: close.go  deadlock.go  direction.go  rang.go  select-non-block.go  select.go
checkfunction/: CMakeLists.txt
cmake/: README
cmake/architecture/: CMakeLists.txt
cmake/cmake/: CMakeLists.txt  main.c  main2.c
cmake/cmake/src/: CMakeCache.txt
cmake/cmake/src/xxx/: CMakeLists.txt
cmake/cmake3/: CMakeLists.txt
cmake/cmake5/: CMakeLists.txt
cmake/cmake6/: CMakeLists.txt
cmake/cmake7/: myshell.sh
cmake/comman_cmd/: CMakeLists.txt  hello.c  new.c
cmake/compiler_type/: CMakeLists.txt
cmake/cpack/: CMakeLists.txt  foo
cmake/custom_comamnd/: README
cmake/execute_process/: CMakeLists.txt
cmake/execute_process/script/: abc.sh
cmake/find_cmd/: CMakeLists.txt
cmake/find_package/: main.c
cmake/ifelse_test/: hello.c
cmake/install/: CMakeLists.txt
cmake/install/src/: CMakeLists.txt
cmake/release/: CMakeLists.txt
cmake/set/cache/: CMakeLists.txt
cmake/set/cache/subdir/: CMakeLists.txt
cmake/special_const/: CMakeLists.txt
cmake/t3/: CMakeLists.txt
cmake2/: CMakeLists.txt
cmake2/src/: CMakeLists.txt  test.c
cmake4/: CMakeLists.txt
cmake7/: CMakeLists.txt
code/: mysql.go
comman_cmd/: script.sh
const/: struct.go
copyfile/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpack/: CMakeCache.txt  Makefile  foo.c  install_manifest.txt
cpp-samples/: Makefile  call_cpp.c  cast_test.cpp  cerr_clog_test.cpp  cin_test.cpp  class_aggregate.cpp  class_constexpr.cpp  class_construct.cpp  class_copy_constructor.cpp  class_explicit.cpp  class_scope.cpp  class_static_member.cpp  class_static_member.h  comment.cpp  cout_file.cpp  declaration_test.cpp  exception_test.cpp  function.c  function.cpp  function.h  function_templcate.cpp  initial_test.cpp  iter_test.cpp  main.cpp  move_test.cpp  read_n_integer.cpp  read_record.cpp  refer_val.cpp  struct_test.cpp  template_class.cpp  test.c  test.cpp  token_test.cpp  type_conversion.cpp  use_c_function.cpp  use_c_function.h  using_test.cpp  vector_source.cpp
createprocess/: code.c  test.bat
error/: error.go  syscall_error.go
find_package/: CMakeLists.txt
foreach_test/: CMakeLists.txt
func/: named_return_values.go  return.go  varnumpar.go
gobyexample/: README  channel-close.go  channel-direction.go  channel-range-over.go  channel-sync.go  channel.go  channel_test1.go  const3.go  constant.go  error.go  func.go  go.go  if.go  nil.go  reference.go  scope.go  select.go  struct.go  switch.go  template.go  ticker.go  timer.go  values.go
helloworld/: .gitignore  config.toml
ifelse_test/: CMakeLists.txt
import/: alias.go  import2.go
install/package/doc/: CMakeLists.txt
interface/: interface.go  interface_nil.go  pointer.go  receiver2.go
job_control/: terminate_job_test1.c  terminate_job_test2.c  terminate_job_test3.c  terminate_job_test4.c  terminate_job_test5.c
judge_system_version/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
learning_python/: bound.py  chapter1  mexit.py  mfileinput.py  mydoctest.py  slots.py
macro_test/: CMakeLists.txt  hello.c  world.c
map/: delete.go
namedpipe_and_inherite/: namedpipe_and_inherite.opensdf  namedpipe_and_inherite.sln  test.c
network_base/: getaddrinfo_test.c  main.c  main2.c  main3.c  main4.c
os_name/: CMakeLists.txt
other/: statefull.go
python-cookbook-master/: README.md
read/: read_empty  read_empty.c  write_file  write_file.c
routine/: README  compiler.go  deadlock.go  gofibonacci3.go  receive.go  sieve1.go
sample/: bufferevent_test1.c  bufferevent_test2.c  common_timeout_test.c  evactive_test.c  evadd_test.c  evbuffer_test2.c  evclient_test1.c  evclient_test2.c  evclient_test3.c  event-read-fifo.c  evfeature_test.c  evloop_test.c  evloopbreak_test.c  evloopbreak_test2.c  evpriority_set.c  evserver_test1.c  evserver_test2.c  evserver_test3.c  evserver_test4.c  evserver_test5.c  evserver_test6.c  evserver_test7.c  signal-test.c  time-test.c
slice/: array_slices.go  slices.go
src/: Makefile  abcabc
struct/: README  composite.go  field_type.go  inherit.go  inherit2.go  overload.go  primative.go  size.go  tag.go  user_defined.go  value_type.go
t2/: CMakeLists.txt
t3/src/: CMakeLists.txt  hello.c
type/: change_a_character.go  number_of_character.go  string.go  type_alias.go  type_assertion.go
use/: CMakeLists.txt  main.c
variable/: assign.go  casting.go  declaration.go  nil.go  predeclared_identifier.go  scope2.go  variable.go
(+1114 files in other folders)
