PROJECT(hello)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)

SET(UNIX 1)

IF(UNIX EQUAL "1")
	MESSAGE(STATUS "UNIX")
ELSE()
	MESSAGE(STATUS "OTHER")
ENDIF()


ENABLE_TESTING()
MACRO(LIB_TEST	name)
	ADD_EXECUTABLE(${name} ${name}.c)
	TARGET_LINK_LIBRARIES(${name} pthread)
	ADD_TEST(${name} ${name})
ENDMACRO(LIB_TEST name)

LIB_TEST(hello)
LIB_TEST(world)
