PROJECT(INSTALL_TEST)
cmake_minimum_required(VERSION 2.8)
MESSAGE(STATUS ${CMAKE_INSTALL_PREFIX})

ADD_EXECUTABLE (foo foo.c)

INSTALL (TARGETS foo DESTINATION acb)
# You do not need make directory first
SET(CPACK_PACKAGE_FILE_NAME ddd)
SET(CPACK_OUTPUT_FILE_PREFIX ${CMAKE_CURRENT_SOURCE_DIR})
SET(CPACK_GENERATOR "ZIP")
INCLUDE (CPack)
