PROJECT(test C CXX)


MESSAGE(STATUS "CMAKE_SYSTEM_NAME is ${CMAKE_SYSTEM_NAME}")
MESSAGE(STATUS "CMAKE_SYSTEM_VERSION is " ${CMAKE_SYSTEM_VERSION})

MESSAGE(STATUS "CMAKE_MAJOR_VERSION is " ${CMAKE_MAJOR_VERSION})
MESSAGE(STATUS "CMAKE_MINOR_VERSION is " ${CMAKE_MINOR_VERSION})
MESSAGE(STATUS "CMAKE_PATCH_VERSION is " ${CMAKE_PATCH_VERSION})

MESSAGE(STATUS "PROJECT_SOURCE_DIR is " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "PROJECT_BINARY_DIR is " ${PROJECT_BINARY_DIR})

MESSAGE(STATUS ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS ${CMAKE_CURRENT_BINARY_DIR})

MESSAGE(STATUS ${CMAKE_CURRENT_LIST_FILE})
MESSAGE(STATUS ${CMAKE_CURRENT_LIST_LINE})

MESSAGE(STATUS ${EXECUTABLE_OUTPUT_PATH})
MESSAGE(STATUS ${LIBRARY_OUTPUT_PATH})
MESSAGE(STATUS ${PROJECT_NAME})

SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
IF(UNIX)
	MESSAGE(STATUS "UNIX")
ENDIF()

#SET(BUILD_SHARED_LIBS ON)	#default create a static lib

MESSAGE(STATUS ${CMAKE_C_FLAGS})
MESSAGE(STATUS ${CMAKE_CXX_FLAGS})

ADD_SUBDIRECTORY(src)
