PROJECT(INSTALL_TEST)
 cmake_minimum_required(VERSION 2.8)
MESSAGE(STATUS ${CMAKE_INSTALL_PREFIX})

# You do not need make directory first

ADD_SUBDIRECTORY(src)

INSTALL(FILES CMakeLists.txt DESTINATION ${CMAKE_SOURCE_DIR}/package/doc)
INSTALL(DIRECTORY src DESTINATION ${CMAKE_SOURCE_DIR}/package/doc)
INSTALL(DIRECTORY abc DESTINATION ${CMAKE_SOURCE_DIR}/package/doc)
INSTALL(PROGRAMS sheel.sh DESTINATION ${CMAKE_SOURCE_DIR}/package/doc)
INSTALL(CODE "MESSAGE(\" nihao \")")
